# docs/swagger.yaml
@@ -1,5 +1,46 @@
 basePath: /api/v1
 definitions:
+  controller.TokenPayload:
+    properties:
+      refreshToken:
+        type: string
+    type: object
+  model.CreateResponse:
+    properties:
+      companyName:
+        type: string
+      id:
+        type: integer
+      message:
+        type: string
+      role:
+        type: string
+      success:
+        type: boolean
+      username:
+        type: string
+    type: object
+  model.LoginResponse:
+    properties:
+      code:
+        type: string
+      companyName:
+        type: string
+      message:
+        type: string
+      refreshToken:
+        type: string
+      role:
+        type: string
+      success:
+        type: boolean
+      token:
+        type: string
+      userId:
+        type: integer
+      username:
+        type: string
+    type: object
   model.Response:
     properties:
       data: {}
@@ -8,6 +49,37 @@ definitions:
       success:
         type: boolean
     type: object
+  model.Segment:
+    properties:
+      callId:
+        type: integer
+      emotion:
+        type: string
+      id:
+        type: integer
+      segNum:
+        type: integer
+    type: object
+  model.User:
+    properties:
+      companyName:
+        type: string
+      id:
+        type: integer
+      password:
+        type: string
+      role:
+        type: string
+      username:
+        type: string
+    type: object
+  model.UserPayload:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
 host: localhost:19001
 info:
   contact: {}
@@ -15,6 +87,127 @@ info:
   title: Speech Emotion Recognition APIs
   version: "1.0"
 paths:
+  /segment/{id}:
+    get:
+      consumes:
+      - application/json
+      description: input id => Segment
+      parameters:
+      - description: Segment Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get segment with Id
+      tags:
+      - segment-manager-apis
+  /segment/all:
+    get:
+      consumes:
+      - application/json
+      description: input none => []Segment
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get all segments
+      tags:
+      - segment-manager-apis
+  /segment/call/{callId}:
+    get:
+      consumes:
+      - application/json
+      description: input callId => []Segment
+      parameters:
+      - description: Call Id
+        in: path
+        name: callId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get segment with CallId
+      tags:
+      - segment-manager-apis
+  /segment/create:
+    post:
+      consumes:
+      - application/json
+      description: input segmentInfo => Segment
+      parameters:
+      - description: Segment info
+        in: body
+        name: segmentInfo
+        required: true
+        schema:
+          $ref: '#/definitions/model.Segment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Create segment
+      tags:
+      - segment-manager-apis
+  /segment/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: input id => deleted segment
+      parameters:
+      - description: Segment Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: deletes one segment from db with id
+      tags:
+      - segment-manager-apis
+  /segment/emo/{id}:
+    get:
+      consumes:
+      - application/json
+      description: input id => emotion
+      parameters:
+      - description: Segment Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get segment emotion with Id
+      tags:
+      - segment-manager-apis
   /user/all:
     get:
       consumes:
@@ -29,7 +222,119 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: returns all users
       tags:
-      - user-apis
+      - user-manager-apis
+  /user/create:
+    post:
+      consumes:
+      - application/json
+      description: creates new user
+      parameters:
+      - description: User information
+        in: body
+        name: UserInfo
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CreateResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: creates new user
+      tags:
+      - user-manager-apis
+  /user/delete/{uid}:
+    delete:
+      consumes:
+      - application/json
+      description: delete user
+      parameters:
+      - description: User ID
+        in: path
+        name: uid
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: delete user
+      tags:
+      - user-manager-apis
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: log user in
+      parameters:
+      - description: username & password
+        in: body
+        name: LoginPayload
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: log user in
+      tags:
+      - user-manager-apis
+  /user/login/jwt:
+    post:
+      consumes:
+      - application/json
+      description: login user, return new token string jwt
+      parameters:
+      - description: Insert your access token
+        in: body
+        name: TokenPayload
+        required: true
+        schema:
+          $ref: '#/definitions/controller.TokenPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.LoginResponse'
+      summary: login user
+      tags:
+      - user-manager-apis
+  /user/wname:
+    get:
+      consumes:
+      - application/json
+      description: input username => user
+      parameters:
+      - description: username
+        in: query
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: get user with usn
+      tags:
+      - user-manager-apis
 securityDefinitions:
   ApiKeyAuth:
     in: header
