# model/segment.go
@@ -6,3 +6,12 @@ type Segment struct {
 	SegNum  int    `json:"segNum" gorm:"segNum"`
 	CallId  int    `json:"callId" gorm:"callId"`
 }
+
+type SegmentRepository interface {
+	GetAll() ([]Segment, error)
+	GetById(id int) (*Segment, error)
+	GetByCallId(callId int) ([]Segment, error)
+	CreateSegment(new *Segment) error
+	DeleteSegment(id int) error
+	GetEmotion(id int) (string, error)
+}
